dashboard-handy-dev/service.yaml
# DASHBOARD HANDY DEV#
apiVersion: "v1"
kind: "Service"
metadata:
  name: "dashboard-handy-service"
  namespace: rhino-admin
  labels:
    app: dashboard-handy
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  selector:
    app: dashboard-handy
  type: "NodePort"
