dashboard-handy-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhino-admin
  namespace: rhino-admin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: "gce"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - dev.rhino-admin.com
    secretName: ssl-dashboard-dev-secret
    # - hosts:
    #   - mitienda.arriba.uy
    #   secretName: ssl-dashboard-handy-secret
  rules:
  - host: dev.rhino-admin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-dev-service
            port:
              number: 80
  - host: mitienda.arriba.uy
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-handy-service
            port:
              number: 80
